Añadidos los test y Sonarqube